--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,7 @@
     <string name="error_app_name_unavailable" translatable="false">App name is not set.</string>
     <string name="error_default_message" translatable="false">Failed to scan code: %1$s</string>
     <string name="title_activity_users">UsersActivity</string>
+    <string name="addBook">Add Book</string>
+    <string name="cancel">Cancel</string>
+    <string name="submit">Submit</string>
 </resources>
