--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,11 +13,11 @@
     <string name="cancel">Cancel</string>
     <string name="submit">Submit</string>
     <string name="add">Add</string>
-    <string name="isbn">ISBN</string>
-    <string name="title">Title</string>
-    <string name="author">Author</string>
-    <string name="genre">Genre</string>
-    <string name="noCopies">No of Copies</string>
+    <string name="isbn">ISBN: </string>
+    <string name="title">Title: </string>
+    <string name="author">Author: </string>
+    <string name="genre">Category: </string>
+    <string name="noCopies">No of Copies: </string>
     <string name="title_activity_books">BooksActivity</string>
     <string name="title_home">Home</string>
     <string name="title_dashboard">Dashboard</string>
@@ -26,4 +26,23 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="title_activity_main">MainActivity</string>
     <string name="title_activity_main2">MainActivity2</string>
+
+    <string-array name="genre">
+        <item>Select Category</item>
+        <item>Fiction</item>
+        <item>Non-fiction</item>
+        <item>Literature</item>
+        <item>Science</item>
+        <item>Technology</item>
+        <item>Biography</item>
+        <item>Philosophy</item>
+        <item>Religion</item>
+        <item>Social Sciences</item>
+        <item>Arts</item>
+        <item>Languages</item>
+        <item>Reference</item>
+        <item>Periodicals</item>
+        <item>Children\'s Literature</item>
+    </string-array>
+
 </resources>
