--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -28,6 +28,7 @@
     <string name="title_activity_main2">MainActivity2</string>
 
     <string name="signup_phrase">Create Your First Admin Profile to \n Access the Libreria.</string>
+    <string name="login_phrase">Enter Username and Password to \n Login Libreria.</string>
 
     <string-array name="genre">
         <item>Select Category</item>
